--- a/css/main.css
+++ b/css/main.css
@@ -1082,9 +1082,14 @@
 }
 
 /* HERO */
+.hero__img {
+    background: linear-gradient(rgba(0,0,0,0.50),rgba(0,0,0,0.40)),url("https://images.unsplash.com/photo-1548685913-fe6678babe8d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=723&q=80") no-repeat center/cover;
+    height: 50vh;
+}
+
 .hero__img .header__emojis {
   position: absolute;
-  top: 40%;
+  top: 45%;
   left: 50%;
   transform: translateX(-50%);
 }
