--- a/css/main.css
+++ b/css/main.css
@@ -3248,6 +3248,11 @@ footer .copyright p {
   .more {
     display: none;
   }
+  
+  /* MODAL */
+  #close + label {
+    padding-right: 4em;
+  }
 }
 
 @media only screen and (max-width: 700px) {
