--- a/css/main.css
+++ b/css/main.css
@@ -662,6 +662,8 @@
   top: 40px;
   width: 100%;
   transform: translateY(-50%);
+  line-height: 1.5rem;
+  padding: 1.6em;
 }
 
 .categories .card__category img {
