prueba de git bash - diseño

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
   width: 20%;
   float: left;
   height: 80vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../images/carousel/carousel1.jpg") no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url(../images/carousel/carousel1.jpg) no-repeat center/cover;
 }
 
 #slider .figure #carousel1 h1 {
@@ -72,7 +72,7 @@
   width: 20%;
   float: left;
   height: 80vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../images/carousel/carousel2.jpg") no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../images/carousel/carousel2.jpg) no-repeat center/cover;
 }
 
 #slider .figure #carousel2 h1 {
@@ -119,7 +119,7 @@
   width: 20%;
   float: left;
   height: 80vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../images/carousel/carousel3.jpg") no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../images/carousel/carousel3.jpg) no-repeat center/cover;
 }
 
 #slider .figure #carousel3 h1 {
@@ -187,7 +187,7 @@
 .hero--sm {
   position: relative;
   height: 60vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url("../images/cliente-diseno4.jpg") no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url("../../images/cliente-diseno4.jpg") no-repeat center/cover;
   display: none;
 }
 
@@ -235,7 +235,7 @@
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  margin: 4em 5em;
+  margin: 1em 5em 4em;
 }
 
 .info .info__container {
@@ -397,7 +397,11 @@
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  font-weight: 800;
+  font-weight: 400;
+}
+
+.carousel__estilos .estilos__text p {
+  font-family: "Lato", sans-serif;
 }
 
 /* VER TODO */
@@ -612,6 +616,7 @@
 .diseno__content h3 {
   color: #B28604;
   margin: .5em;
+  max-width: 60vw;
 }
 
 .diseno__content p {
@@ -662,6 +667,8 @@
   top: 40px;
   width: 100%;
   transform: translateY(-50%);
+  line-height: 1.4rem;
+  margin: 1em auto;
 }
 
 .categories .card__category img {
@@ -681,6 +688,8 @@
   opacity: 0;
   visibility: hidden;
   margin-top: 20px;
+  line-height: 1.5rem;
+  padding: 1em;
   transition: .3s all ease;
 }
 
@@ -844,7 +853,7 @@
 .hero__products {
   position: relative;
   height: 50vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url("../images/clientediseno4.jpg") no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url("../images/clien") no-repeat center/cover;
 }
 
 .products__header {
@@ -1083,13 +1092,13 @@
 
 /* HERO */
 .hero__img {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url("https://images.unsplash.com/photo-1548685913-fe6678babe8d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=723&q=80") no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url("https://images.unsplash.com/photo-1557425529-b1ae9c141e7d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80") no-repeat center/cover;
   height: 50vh;
 }
 
 .hero__img .header__emojis {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -1099,6 +1108,7 @@
   font-size: 2rem;
   letter-spacing: .2rem;
   font-weight: 500;
+  text-shadow: 1px 1px 1px #000;
 }
 
 /* GENERAL STYLES */
@@ -1447,10 +1457,6 @@ span {
   gap: 1em;
 }
 
-.contact .contact__container .contact__form textarea {
-  resize: none;
-}
-
 .contact .contact__container .contact__info {
   display: flex;
   flex-flow: column;
@@ -1525,132 +1531,305 @@ span {
   }
 }
 
-/* LISTA */
-.list {
-  display: flex;
-  flex-flow: row;
-  align-items: center;
-  gap: .4em;
-  margin: 1.5rem 0;
-}
-
-.list .list__card {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  display: flex;
-  flex-flow: column;
-  gap: .7em;
-  align-items: center;
-}
-
-.list .list__card .list__number {
-  font-family: "Raleway", sans-serif;
-  background: #FFCB00;
-  padding: 1em 1.5em;
-  border-radius: 50%;
-  color: white;
-  font-weight: 700;
-  font-size: 1.3rem;
-}
-
-.list .list__card span {
-  font-family: "Raleway", sans-serif;
-  font-size: 1rem;
-  font-weight: 700;
-}
-
-.list .list__card p {
-  font-family: "Raleway", sans-serif;
-  font-size: .8rem;
-  max-width: 80%;
-}
-
-/* FORM */
+/* GENERAL STYLES */
 .diseno__section {
   display: flex;
   flex-flow: column;
   align-items: center;
-  margin: 3em 0;
 }
 
 .diseno__section h2 {
   position: relative;
+  color: whitesmoke;
+  margin-bottom: 1em;
+}
+
+.diseno__section h2::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 60%;
+  height: 2px;
+  background: #B28604;
+  left: 0;
 }
 
 .diseno__section p {
   margin-bottom: .8em;
 }
 
-.diseno__section .file {
-  margin: 1em;
+/* LISTA */
+.list__container {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 1.6em;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url("https://s3.envato.com/files/258735335/IMG_1807-1334.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: auto;
+  padding: 2em;
 }
 
+.list__container .list {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  gap: 4em;
+  margin: 1.5rem 0;
+  width: 100%;
+}
+
+.list__container .list .list__card {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  gap: .7em;
+  width: 300px;
+  height: 300px;
+  background: rgba(255, 255, 255, 0.774);
+  border-radius: .3em;
+  transition: .3s ease;
+}
+
+.list__container .list .list__card .list__number {
+  font-family: "Raleway", sans-serif;
+  background: #F3D848;
+  padding: .5em 1em;
+  margin: .5em 0;
+  border-radius: 50%;
+  color: white;
+  font-weight: 700;
+  font-size: 1.3rem;
+}
+
+.list__container .list .list__card h3 {
+  font-family: "Raleway", sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.list__container .list .list__card .iconify {
+  width: 70px;
+  height: auto;
+  color: white;
+}
+
+.list__container .list .list__card p {
+  font-family: "Raleway", sans-serif;
+  font-size: .8rem;
+  text-align: center;
+  line-height: 1.4rem;
+  max-width: 80%;
+}
+
+/* FORM DISENO */
 .diseno__article {
   display: flex;
   flex-flow: column;
   justify-content: center;
+  margin: 3em auto;
+  width: 70%;
 }
 
-.diseno__article .diseno__container {
+.diseno__article P {
+  font-size: .9rem;
+  line-height: 1.5rem;
+  margin: 1em 0;
+}
+
+.diseno__article .diseno__form {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  margin: 2em 0;
+  gap: 1.5em;
+}
+
+.diseno__article .diseno__form h3 {
+  align-self: flex-start;
+}
+
+.diseno__article .diseno__form .diseno__container {
   justify-content: center;
+  align-items: center;
 }
 
-.diseno__article .container__check {
-  display: inline;
+.diseno__article .diseno__form .diseno__container .diseno__input {
+  font-family: "Raleway", sans-serif;
+  font-size: .8rem;
+  border: none;
+  background: whitesmoke;
+  border-bottom: 2px solid #B28604;
+}
+
+.diseno__article .diseno__form .container__check {
+  display: inline-block;
+  align-self: center;
   gap: 1em;
 }
 
-.diseno__article .diseno__btn {
-  margin-top: 0;
+.diseno__article .diseno__form .container__check .diseno__check {
+  border: 1px solid #B28604;
 }
 
-/* GALERIA */
-.container .row {
+.diseno__article .diseno__form .file {
+  margin: 1em;
+}
+
+.diseno__article .diseno__form .btn__form {
+  display: inline-block;
+  align-self: center;
+  margin-top: 0;
+  padding: 1em;
+  border: none;
+  width: 100%;
+  border: 1px solid #B28604;
+}
+
+/* MATERIALES */
+.diseno__materiales {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: baseline;
+  width: 100%;
+  background: linear-gradient(rgba(255, 255, 255, 0.768), rgba(255, 255, 255, 0.439)), url("https://wallpaperaccess.com/full/6325358.jpg") no-repeat center 40%/cover;
+}
+
+.diseno__materiales h3 {
+  margin: 1em;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.diseno__materiales .maderas__container {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  gap: 2.2em;
+  margin: 2em 0;
+}
+
+.diseno__materiales .maderas__container .maderas__features {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: .5em;
+}
+
+.diseno__materiales .maderas__container .maderas__features .madera {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
+
+.diseno__materiales .maderas__container .maderas__features p {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.diseno__materiales .maderas__container .maderas__features .features {
+  display: flex;
+  align-items: center;
+  gap: .3em;
+  color: #D8BCA8;
+}
+
+.diseno__materiales .maderas__container .maderas__features .features .iconify {
+  width: 30px;
+}
+
+.diseno__materiales .maderas__container .maderas__features .features p {
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.diseno__materiales .maderas__container #caoba {
+  background: url("https://upload.wikimedia.org/wikipedia/commons/3/34/Swietenia_macrophylla_wood.jpg");
+}
+
+.diseno__materiales .maderas__container #haya {
+  background: url("https://www.esteba.com/207332-large_default/haya-vaporizada-c-v-seca-27mm-238.jpg");
+}
+
+.diseno__materiales .maderas__container #roble {
+  background: url("https://www.forestalmaderero.com/wp-content/uploads/2019/07/roble-rojo-americano.jpg");
+}
+
+.diseno__materiales .maderas__container #olmo {
+  background: url("https://comerciallyb.cl/images/stories/virtuemart/product/olmo.jpg") center;
+}
+
+.diseno__materiales .maderas__container #cedro {
+  background: url("https://image.shutterstock.com/image-photo/background-texture-ash-wood-on-600w-1936384099.jpg");
+}
+
+.diseno__materiales .maderas__container #algarrobo {
+  background: url("http://infomadera.net/incs/framew/thumbnail.php?x=200&image=maderas/img1_290.jpg");
+}
+
+/* GALERIA DISENO */
+.design__gallery {
+  background: whitesmoke;
+  width: 100%;
+}
+
+.design__gallery .container h2 {
+  color: black;
+  margin: 2em 0;
+}
+
+.design__gallery .container .row {
   height: 50%;
 }
 
-.container #coldiseno1 {
+.design__gallery .container #coldiseno1 {
   background: url("../images/gallery/disenogallery1.jpg") no-repeat center/cover;
   height: 100%;
 }
 
-.container #coldiseno2 {
+.design__gallery .container #coldiseno2 {
   background: url("../images/gallery/disenogallery2.jpg") no-repeat center/cover;
   height: 100%;
 }
 
-.container #coldiseno3 {
+.design__gallery .container #coldiseno3 {
   background: url("../images/pdprod1.jpg") no-repeat 100%/cover;
   height: 100%;
 }
 
-.container #coldiseno4 {
+.design__gallery .container #coldiseno4 {
   background: url("../images/gallery/disenogallery4.jpg") no-repeat center/cover;
   height: 100%;
 }
 
-.container #coldiseno5 {
+.design__gallery .container #coldiseno5 {
   background: url("../images/prod.jpg") no-repeat center/cover;
   height: 100%;
 }
 
-.container #coldiseno6 {
+.design__gallery .container #coldiseno6 {
   background: url("https://http2.mlstatic.com/D_NQ_NP_997887-MLA32287092500_092019-O.webp") no-repeat center/cover;
   height: 100%;
 }
 
-.container #coldiseno7 {
+.design__gallery .container #coldiseno7 {
   background: url("../images/gallery/disenogallery7.jpg") no-repeat center/cover;
   height: 100%;
 }
 
-.container #coldiseno8 {
+.design__gallery .container #coldiseno8 {
   background: url("../images/gallery/disenogallery8.jpg") no-repeat center/cover;
   height: 100%;
 }
 
-.container #coldiseno9 {
+.design__gallery .container #coldiseno9 {
   background: url("../images/gallery/disenogallery9.jpg") no-repeat center/cover;
   height: 100%;
 }
@@ -1658,8 +1837,7 @@ span {
 /* OPINIONES */
 .testimonials {
   text-align: center;
-  margin: 0 1.2em 3em;
-  position: relative;
+  margin: 5em 0 7em;
   gap: 4em;
   display: flex;
   flex-flow: row wrap;
@@ -1949,7 +2127,7 @@ header .menu--large .submenu .submenu__pages {
   border-radius: .4em;
   box-shadow: 0 5px 15px -5px black;
   position: absolute;
-  top: 100%;
+  top: 150%;
   left: -30%;
   right: -30%;
   max-width: 400px;
@@ -2611,7 +2789,7 @@ footer .copyright p {
   height: auto;
   background-color: transparent;
   color: #B2AA0D;
-  border: 2px solid 1px solid #B2AA0D;
+  border: 1px solid #B2AA0D;
   border-radius: .3em;
   font-family: "Lato", sans-serif;
   text-align: center;
@@ -2622,9 +2800,7 @@ footer .copyright p {
   letter-spacing: .1em;
   padding: 1em;
   display: inline-block;
-  color: #B2AA0D;
   font-weight: 500;
-  border: 1px solid #B2AA0D;
   transition: ease-in-out 0.3s;
 }
 
@@ -2740,7 +2916,7 @@ footer .copyright p {
   height: 3.5em;
   background-color: transparent;
   color: #B2AA0D;
-  border: 2px solid #B2AA0D;
+  border: 1px solid #B2AA0D;
   border-radius: .3em;
   font-family: "Lato", sans-serif;
   text-align: center;
@@ -2758,6 +2934,33 @@ footer .copyright p {
 .slider__btn:hover {
   color: white;
   border-color: white;
+}
+
+/* LISTA DISEÑO */
+.list__btn {
+  display: inline-block;
+  width: auto;
+  height: auto;
+  background-color: transparent;
+  color: #DADADA;
+  border: 2px solid #DADADA;
+  border-radius: .3em;
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  font-weight: 700;
+  outline: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  padding: 1em;
+  display: inline-block;
+  font-weight: 500;
+  transition: ease-in-out 0.3s;
+}
+
+.list__btn:hover {
+  color: #F3D848;
+  border: 2px solid #F3D848;
 }
 
 /* GENERAL STYLES */
@@ -2970,6 +3173,11 @@ footer .copyright p {
 /* SPAN BOLD */
 .negrita {
   font-weight: 600;
+}
+
+/* FORM STYLES */
+textarea {
+  resize: none;
 }
 
 /* MODAL */
@@ -3187,6 +3395,10 @@ footer .copyright p {
   font-family: "Lato", sans-serif;
 }
 
+* html {
+  scroll-behavior: smooth;
+}
+
 * a, * .register__container .registro ul li .compras, .register__container .registro ul li * .compras {
   text-decoration: none;
 }
@@ -3248,9 +3460,11 @@ footer .copyright p {
   .more {
     display: none;
   }
-  
   /* MODAL */
-  #close + label {
+  .modal__container {
+    width: 65%;
+  }
+  .modal__container #close + label {
     padding-right: 4em;
   }
 }
